--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 html, body {
   background-color: gray;
   color : white;
+
+  font-size: large;
+
   margin: auto;
   text-align: center;
   padding: 0;
